# tauri-app

./: generate-scenes-and-qr.js  index.html  package-lock.json  package.json  scenes.json  vite.config.js
scenes/: scenes.json
src/: App.css  App.jsx  main.jsx
src-tauri/: Cargo.toml  mobile-capability.json  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
